@@ -1,5 +1,8 @@
 2006-08-16  Per Bothner  <per@bothner.com>
 
+	* ModuleExp.java (evalToClass): Don't call extra loadClass to get main
+	class.  This may use inconsistent name mangling, and is redundant.
+
 	* ModuleExp.java (lastZipCounter): New static field.
 	(evalToClass):  For zip dump file name use max of lastZipCounter
 	and interactiveCounter, to avoid overwriting an old file in more
